# elasticsearch-agent

./: README.md  pyproject.toml
datasets/social_economic_indicators/: co2_production.csv  gross_national_income_per_capital.csv  human_development_index.csv  life_expectancy_by_birth.csv
docs/: elastic_agent.bpmn
elasticsearch_agent/: config.py  log_init.py
elasticsearch_agent/agent/: agent_factory.py
elasticsearch_agent/agent/test/: agent_factory_test.py
elasticsearch_agent/tools/: index_data_tool.py  index_details_tool.py  index_search_tool.py  list_indices_tool.py
